@@ -1,5 +1,9 @@
 1999-10-31  Akim Demaille  <akim@epita.fr>
 
+	* acgeneral.m4: Formatting changes.
+
+1999-10-31  Akim Demaille  <akim@epita.fr>
+
 	* TODO: Updated.
 
 1999-10-31  Akim Demaille  <akim@epita.fr>
